Added skeleton file structures

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,6 @@
     "cfenv": "^1.2.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.3"
   }
 }
